--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <header>
-        <h1><a href="/beans">{{ title }}</a> Welcome Old Bean!</h1>
-        <p>We are mean, our Beans are mean, be you're best bean.</p>
+        <h1><a href="/">{{title }}</a> Welcome Old Bean!</h1>
+        <p>Don't be a mean bean, buy a Mean Bean bean.</p>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -24,15 +24,18 @@
 
     <main>
         <h2>Please select a category</h2>
+        <p>Please select from our wide variety of premium cooking ingredients.</p>
         <h3><a href="/beans">We only Sell Beans</a></h3>
         <p>
             Please note: Beans are sold in multiples of one. Due to the global financial 
             crisis yatch prices have risen.  Have you seen my platipuss?
         </p>
 
-
-
     </main>
+
+    <footer>
+        <p>&copyThe Auchnagatt Fine Bean Company</p>
+    </footer>
 </body>
 
 </html>
