--- a/templates/bean.html
+++ b/templates/bean.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <h1><a href="/">{{ title }}</a>  {{ bean.name }}</h1>
+        <h1><a href="/">{{ title }}</a> - {{ bean.name }}</h1>
         <p>We are mean, our Beans are mean, be you're best bean.</p>
         <nav>
             <ul>
@@ -20,9 +20,35 @@
         </nav>
     </header>
     
-    <main>
+    <main id="bean-full">
         
+        <h2>{{ bean.name }} 
+            {% if bean.on_sale %}
+            <small>SALE</small>
+            {% endif %}
+        </h2>
+
+        <section class="bean-full-panel">
+            <img src="/static/img/bean.jpg" alt="A place holder image for {{ bean.name }}">
+            
+            <div>
+                <p>{{ bean.description }}</p>
+                <p>SALE now only <strong>&#163;{{ bean.price }}</strong> a bean!</p>
+                {% if not bean.in_stock %}
+                <p class="small-print">Sorry, more stock arriving {{ bean.date }}</p>
+                {% endif %}
+            </div>
+
+        </section>
+
+
+
 
     </main>
+
+    <footer>
+        <p>&copyThe Auchnagatt Fine Bean Company</p>
+    </footer>
+    
 </body>
 </html>
